# pico-examples

spi/spi_master_slave/spi_slave/: CMakeLists.txt  spi_slave.c  spi_slave.cc  spi_slave_blocking.cc
